// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`iOS ClearIcon should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "lineHeight": 24,
      },
      Object {
        "fontSize": 16,
        "lineHeight": 16,
      },
      Object {
        "color": "rgb(178, 174, 189)",
      },
    ]
  }
>
  
</Text>
`;

exports[`iOS InvalidIcon should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "lineHeight": 24,
      },
      Object {
        "fontSize": 16,
        "lineHeight": 16,
      },
      Object {
        "color": "rgb(255, 84, 82)",
      },
    ]
  }
>
  
</Text>
`;

exports[`iOS ValidIcon should render correctly 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  disabled={false}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "rgb(82, 76, 97)",
        "fontFamily": "BpkIcon",
        "fontSize": 24,
        "lineHeight": 24,
      },
      Object {
        "fontSize": 16,
        "lineHeight": 16,
      },
      Object {
        "color": "rgb(0, 215, 117)",
      },
    ]
  }
>
  
</Text>
`;
